--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -837,3 +837,40 @@
   address = {New York, NY, USA},
   keywords = {Breakpoint, Cyclic paths, Dynamic analysis, Path backwalk, Path profiling, Probe instrumentation}
 }
+
+@article{Fredkin60,
+  author = {Fredkin, Edward},
+  title = {{Trie Memory}},
+  journal = {Communications of the ACM},
+  issue_date = {September 1960},
+  volume = {3},
+  number = {9},
+  month = sep,
+  year = {1960},
+  issn = {0001-0782},
+  pages = {490--499},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/367390.367400},
+  doi = {10.1145/367390.367400},
+  acmid = {367400},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Ausiello12,
+  author = {Ausiello, Giorgio and Demetrescu, Camil and Finocchi, Irene and Firmani, Donatella},
+  title = {{k-Calling Context Profiling}},
+  booktitle = {Proceedings of the ACM International Conference on Object Oriented Programming Systems Languages and Applications},
+  series = {OOPSLA '12},
+  year = {2012},
+  isbn = {978-1-4503-1561-6},
+  location = {Tucson, Arizona, USA},
+  pages = {867--878},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/2384616.2384679},
+  doi = {10.1145/2384616.2384679},
+  acmid = {2384679},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {call graph, calling context tree, dynamic program analysis, edge profiling, profiling, vertex profiling}
+}
