--- a/header.tex
+++ b/header.tex
@@ -63,7 +63,11 @@
 {\noindent{\sc Proof} (Sketch).}{\hspace*{\fill}$\Box$\par\vspace{2mm}}
 
 % macros
+\newcommand{\missing}{\textbf{XXX}}
 \newcommand{\gcc}{{\tt gcc}}
 \newcommand{\gprof}{{\tt gprof}}
 \newcommand{\spacesaving}{Space-Saving}
-\newcommand{\missing}{\textbf{XXX}}
+\newcommand{\kipf}{\mbox{$k$-IPF}}
+\newcommand{\ksf}{\mbox{$k$-SF}}
+\newcommand{\kblpp}{\mbox{$k$-BLPP}}
+\newcommand{\blpp}{\mbox{BLPP}}
