--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref}
 \usepackage[numbers,square]{natbib}
 \usepackage{algorithm2e}
+\usepackage{wrapfig}
 
 \hypersetup{
   colorlinks = true, % colours links instead of ugly boxes
