--- a/figures/kblpp-approach/caption.tex
+++ b/figures/kblpp-approach/caption.tex
@@ -1,1 +1,2 @@
-\label{fig:kblpp-approach} Overview of our approach: classical Ball-Larus profiling versus k-iteration path profiling, cast in a common framework.
+\label{fig:kblpp-approach} Overview of our approach: Ball-Larus profiling versus k-iteration path profiling, cast in a common framework.
+%Overview of our approach: classical Ball-Larus profiling versus k-iteration path profiling, cast in a common framework.
